# kinship-earth-mcp

./: .gitignore  Dockerfile  TESTING.md  pyproject.toml
.github/workflows/: test.yml
examples/qgis/: README.md  fetch_ecological_data.py
examples/qgis/sample-data/: README.md  monterey-bay-observations.geojson
servers/ebird/: pyproject.toml
servers/inaturalist/: pyproject.toml
servers/inaturalist/src/inaturalist_mcp/: adapter.py
servers/obis/src/obis_mcp/: adapter.py
servers/orchestrator/: pyproject.toml
servers/orchestrator/src/kinship_orchestrator/: server.py
servers/soilgrids/: pyproject.toml
servers/soilgrids/src/soilgrids_mcp/: __init__.py  adapter.py  server.py
servers/soilgrids/tests/: test_soil_restoration.py
servers/usgs-nwis/: pyproject.toml
shared/src/kinship_shared/: __init__.py  ecology_tools.py  schema.py
tools/: schema_snapshot.py
webapp/: app.py  pyproject.toml
webapp/static/: index.html
