[project]
name = "ebird-mcp"
version = "0.1.0"
requires-python = ">=3.12"
description = "MCP server for the eBird API (Cornell Lab of Ornithology)"
license = { text = "MIT" }
dependencies = [
    "mcp[cli]>=1.0",
    "httpx>=0.27",
    "kinship-shared",
]

[tool.uv.sources]
kinship-shared = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/ebird_mcp"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
